[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.poetry]
name = "cox-model-app"
version = "0.1.0"
description = "Dockerized Cox Proportional Hazards Model for Prediction"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12" # Ensure this matches your Python 3.10 environment
pandas = "2.3.1"        # Specify the versions you successfully used
numpy = "1.26.4"
lifelines = "0.30.0"
scikit-learn = "1.x.x"  # Use your scikit-learn version, e.g., 1.2.2 or 1.3.0
pyarrow = "20.0.0"      # Version needed for BigQuery
google-cloud-bigquery = "2.x.x" # Use your installed version, e.g., 2.34.4
PyYAML = "6.x.x"        # For loading YAML config, e.g., 6.0.1 (or leave as generic if no specific issue)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
